# claude-code-critic

./: .gitignore  CHANGELOG.md  CLAUDE.md  MILESTONES.md  PRD.md  README.md  TDD.md  pyproject.toml  pytest.ini  recreate_collection.py  requirements.txt  setup.sh
.claude/commands/: rebuild.md  redesign.md  refactor.md  reoptimize.md  reresilience.md  resecure.md  resolve.md  retest.md  retype.md
.github/workflows/: ci.yml  ui-quality.yml.example
claude_indexer/: categorization.py  cli_full.py  fallback_parser.py  indexer.py  indexer_logging.py  main.py  parallel_batch_processor.py  parallel_processor.py  performance.py  progress_bar.py  service.py
claude_indexer/analysis/: base_parsers.py  entities.py  javascript_parser.py  json_parser.py  observation_extractor.py  parse_cache.py  parser.py  text_parser.py
claude_indexer/chat/: html_report.py  summarizer.py
claude_indexer/cli/: __init__.py  errors.py  output.py  status.py
claude_indexer/config/: __init__.py  config_loader.py  config_schema.py  hierarchical_loader.py  legacy.py  migration.py  models.py  unified_config.py  validation.py
claude_indexer/doctor/: __init__.py  checkers.py  manager.py  types.py
claude_indexer/embeddings/: __init__.py  base.py  bm25.py  cache.py  openai.py  registry.py  voyage.py
claude_indexer/git/: __init__.py  change_detector.py
claude_indexer/hooks/: __init__.py  fix_generator.py  index_queue.py  repair_result.py  repair_session.py  session_start.py  stop_check.py
claude_indexer/indexing/: __init__.py  batch_optimizer.py  checkpoint.py  pipeline.py  progress.py  types.py
claude_indexer/init/: __init__.py  collection_manager.py  generators.py  hooks_installer.py  manager.py  mcp_configurator.py  project_detector.py  templates.py  types.py
claude_indexer/performance/: __init__.py  metrics.py  profiler.py  timing.py
claude_indexer/processing/: content_processor.py  context.py  processors.py  unified_processor.py
claude_indexer/rules/: base.py  config.py  discovery.py  engine.py
claude_indexer/rules/documentation/: missing_docstring.py
claude_indexer/rules/resilience/: __init__.py  missing_timeout.py  unsafe_concurrency.py  unsafe_loops.py  unsafe_null.py  unsafe_resources.py
claude_indexer/rules/security/: command_injection.py  hardcoded_secrets.py  insecure_crypto.py  insecure_deserialize.py  insecure_random.py  missing_auth.py  missing_https.py  path_traversal.py  sensitive_exposure.py  sql_injection.py  xss_vulnerability.py
claude_indexer/rules/tech_debt/: __init__.py  commented_code.py  complexity.py  dead_code.py  debug_statements.py  deprecated_apis.py  duplication.py  large_files.py  magic_numbers.py  naming_conventions.py  todo_markers.py  token_drift.py
claude_indexer/session/: __init__.py  context.py  detector.py  lock.py  manager.py
claude_indexer/storage/: __init__.py  base.py  diff_layers.py  file_cache.py  qdrant.py  query_cache.py
claude_indexer/ui/: __init__.py  config.py  models.py  orchestrator.py  storage.py  tokens.py
claude_indexer/ui/ci/: __init__.py  (+4 more)
claude_indexer/utils/: __init__.py  claudeignore_parser.py  hierarchical_ignore.py  lazy.py  smart_watcher_wait.py
claude_indexer/watcher/: debounce.py  handler.py
claude_indexer/workspace/: config.py  context.py  detector.py  manager.py  types.py
docs/: CLI_REFERENCE.md  CONFIGURATION.md  TROUBLESHOOTING.md  UI_CI_SETUP.md  UI_CONSISTENCY_GUIDE.md  UI_METRICS.md  installation.md  memory-functions.md
hooks/: end-of-turn-check.sh  post-file-change.sh  pre-commit-guard.sh  pre-tool-guard.sh  prompt_handler.py  session-start.sh  session_start.py
hooks/tests/: benchmark_performance.sh  run_tests.sh  test_quality.sh  test_security.sh
schemas/: ui-quality.schema.json  unified-config.schema.json
scripts/: install-git-hooks.sh
templates/: CLAUDE.md.template  guard.config.json.template  settings.local.json.template  ui-quality.config.template.yaml
templates/generic/: .claudeignore.template  guard.config.json.template
templates/javascript/: .claudeignore.template  guard.config.json.template
templates/python/: .claudeignore.template  guard.config.json.template
templates/react/: .claudeignore.template  guard.config.json.template
templates/typescript/: .claudeignore.template  guard.config.json.template
tests/: conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_indexer_performance.py  test_ui_performance.py
tests/e2e/: __init__.py  test_end_to_end.py  test_full_lifecycle.py  test_playwright_setup.py
tests/integration/: test_claudeignore_integration.py  test_delete_event.py  test_incremental_indexing.py  test_indexer_flow.py  test_ui_cross_framework.py  test_ui_fixtures.py  test_watcher_flow.py
tests/regression/: test_ui_snapshots.py
tests/unit/: test_baseline.py  test_ci_cache.py  test_claudeignore.py  test_cli.py  test_clustering.py  test_component_normalizer.py  test_config.py  test_config_migration.py  test_config_validation.py  test_critique_engine.py  test_cross_file_analyzer.py  test_diff_filter.py  test_duplication_rules.py  test_element_targeting.py  test_embeddings.py  test_git_change_detector.py  test_git_diff_collector.py  test_hashing.py  test_hierarchical_loader.py  test_html_reporter.py  test_inconsistency_rules.py  test_logging.py  test_metrics_aggregator.py  test_metrics_collector.py  test_parser.py  test_plan_generator.py  test_pseudo_states.py  test_python_file_operations.py  test_risk_mitigations.py  test_sarif_exporter.py  test_similarity_engine.py  test_smell_rules.py  test_source_collectors.py  test_style_capture.py  test_style_normalizer.py  test_token_drift_rules.py  test_token_resolver.py  test_ui_config.py  test_ui_critique_engine.py  test_ui_guard.py  (+7 more)
utils/: async_analyzer.py  code_analyzer.py  exclusion_manager.py  fast_duplicate_detector.py  find_missing_files.py  find_missing_metadata.py  gitignore_parser.py  guard_cache.py  library_scraper.py  make_chats.py  make_manuals_list.py  manual_memory_backup.py  memory_guard.py  merge_settings.py  prompt_handler.py  qdrant_stats.py  signature_hash.py  signature_table_manager.py
(+116 files in other folders)
